--- a/static/styles/form.css
+++ b/static/styles/form.css
@@ -15,7 +15,7 @@
 .form-group label {
     margin-bottom: 5px;
     font-size: 14px;
-    color: #555;
+    color: #232423;
 }
 
 /* Поля ввода */
@@ -31,6 +31,11 @@
 .form-field:focus {
     border-color: #0066ff;
     outline: none;
+}
+
+/* Поля логина */
+.login-field {
+    max-width: 100%;
 }
 
 /* Кнопка подтверждения */
