--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>К-Резюме</title>
-        <link rel="stylesheet" href="{{ url_for("static", filename="styles/style.css") }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/base_admin.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/form.css') }}">
     </head>
     <body>
         <header class="header">
-            <div class="title">К-Резюме</div>
+            <a href="{{ url_for('index') }}">К-Резюме</a>
             <a href="{{ url_for('logout') }}" class="logout-link">Выход</a>
         </header>
         <div class="main-wrapper">
