--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Вход в К-Резюме</title>
-    <link rel="stylesheet" href="{{ url_for("static", filename="styles/login.css") }}">
-    <link rel="stylesheet" href="{{ url_for("static", filename="styles/form.css") }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename="styles/login.css") }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename="styles/form.css") }}">
 </head>
 <body>
     <div class="login-container">
@@ -13,13 +13,13 @@
         <form class="login-form" action="" method="post">
             {{ form.csrf_token() }}
 
-            {% for field in form if field.name != "csrf_token" %}
+            {% for field in form if field.name not in ('csrf_token', 'submit') %}
             <div class="form-group">
                 {{ field.label() }}
-                    {{ field }}
-                        {% for error in field.errors %}
-                            {{ error }}
-                        {% endfor %}
+                {{ field() }}
+                {% for error in field.errors %}
+                    {{ error() }}
+                {% endfor %}
             </div>
             {% endfor %}
 
@@ -31,7 +31,7 @@
                 </ul>
               {% endif %}
             {% endwith %}
-            <button type="submit" class="submit-button">Войти или зарегистрироваться</button>
+            {{ form.submit() }}
         </form>
     </div>
 </body>
