--- a/templates/personal.html
+++ b/templates/personal.html
@@ -1,17 +1,18 @@
 {% extends "base_admin.html" %}
 
 {% block content %}
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
         {{ form.csrf_token() }}
 
-        {% for field in form if field.name != "csrf_token" %}
-            <p>{{ field.label() }}</p>
-            <p>
-                {{ field }}
-                    {% for error in field.errors %}
-                        {{ error }}
-                    {% endfor %}
-            </p>
+        {% for field in form if field.name not in ('csrf_token', 'submit') %}
+        <div class="form-group">
+            {{ field.label() }}
+            {{ field() }}
+            {% for error in field.errors %}
+                {{ error() }}
+            {% endfor %}
+        </div>
         {% endfor %}
+        {{ form.submit() }}
     </form>
 {% endblock %}
