--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
                 {{ field.label() }}
                 {{ field() }}
                 {% for error in field.errors %}
-                    {{ error() }}
+                    {{ error }}
                 {% endfor %}
             </div>
             {% endfor %}
