--- a/templates/specialization.html
+++ b/templates/specialization.html
@@ -1,12 +1,25 @@
 {% extends "base_admin.html" %}
 
 {% block content %}
-    <p>Готовность к работе: Рассмотрю предложения</p>
-    <p>Ожидаемое вознаграждение: 350 000 рублей</p>
-    <p>Коротко о себе: Python-разработчик</p>
-    <p>Специализация: Разработка > Бэкенд разработчик, Разработчик приложений</p>
-    <p>Ваша квалификация: Старший (senior)</p>
-    <p>Профессиональные навыки: Python, Django, MySQL, Docker, Git, Linux, PostgreSQL, REST, Redis, Celery</p>
-    <p>Знание языков: Английский B2</p>
-    <p>Дополнительно: Готов к удаленной работе</p>
+    <form action="" method="post">
+        {{ form.csrf_token() }}
+
+        {% for field in form if field.name not in ('csrf_token', 'submit') %}
+        <div class="form-group">
+            {% if field.type == 'BooleanField' %}
+                <div class="checkbox-container">
+                    {{ field() }}
+                    {{ field.label() }}
+                </div>
+            {% else %}
+                {{ field.label() }}
+                {{ field() }}
+            {% endif %}
+            {% for error in field.errors %}
+                {{ error }}
+            {% endfor %}
+        </div>
+        {% endfor %}
+        {{ form.submit() }}
+    </form>
 {% endblock %}
