--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>К-Резюме</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/base_admin.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/form.css') }}">
     </head>
