--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,10 @@
         <h2>Мои резюме:</h2>
             <ul>
                 {% for resume in resumes %}
-                    <li class="resume-item">
-                        <span class="resume-name">{{ resume.name }}</span>
+                    <li class="list-item">
+                        <span class="list-name">{{ resume.name }}</span>
                         <div class="buttons">
+                            <a href="{{ url_for('list_resume', resume_id=resume.id) }}" class="btn">Печать</a>
                             <a href="{{ url_for('edit_resume', resume_id=resume.id) }}" class="btn">Изменить</a>
                             <a href="{{ url_for('delete_resume', resume_id=resume.id) }}" class="btn delete-btn">Удалить</a>
                         </div>
