--- a/static/styles/base_admin.css
+++ b/static/styles/base_admin.css
@@ -65,7 +65,7 @@ body {
     width: 100%;
 }
 
-/* --- Вертикальное меню --- */
+/* Вертикальное меню */
 .menu {
     flex-shrink: 0;
     width: 220px;
@@ -76,10 +76,12 @@ body {
 }
 
 .menu ul {
+    all: unset;
     list-style: none;
 }
 
-.menu li + li {
+.menu li {
+    all: unset;
     border-top: 1px solid #eee;
 }
 
@@ -107,7 +109,7 @@ body {
     border-left-color: #0055b8;
 }
 
-/* --- Основной контент --- */
+/* Основной контент */
 .content {
     flex-grow: 1;
     background-color: white;
@@ -159,7 +161,7 @@ body {
     margin-top: 40px;
 }
 
-/* --- Адаптив --- */
+/* Адаптивность */
 @media (max-width: 768px) {
     .main-wrapper {
         flex-direction: column;
