--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -21,8 +21,8 @@ li:hover {
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
 
-/* Список резюме */
-.resume-item {
+/* Список резюме, работ, курсов... */
+.list-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,7 +30,7 @@ li:hover {
     border-bottom: 1px solid #ccc;
 }
 
-.resume-name {
+.list-name {
     font-weight: bold;
 }
 
@@ -71,13 +71,13 @@ li:hover {
         max-width: 100%;
     }
 
-    .resume-item {
+    .list-item {
         flex-direction: column;
         align-items: flex-start;
         padding: 10px;
     }
 
-    .resume-name {
+    .list-name {
         max-width: 100%;
         word-break: break-word;
         margin-bottom: 8px;
