--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/base.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/form.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
     </head>
     <body>
         <header class="header">
@@ -23,5 +24,6 @@
         <footer class="footer">
             © 2025 Kiyko Inc. — Все права защищены
         </footer>
+        <script src="{{ url_for('static', filename='scripts/script.js') }}"></script>
     </body>
 </html>
