--- a/templates/education.html
+++ b/templates/education.html
@@ -5,8 +5,8 @@
         <h2>Опыт работы:</h2>
             <ul>
                 {% for school in schools %}
-                    <li class="resume-item">
-                        <span class="resume-name">{{ school['name'] }}</span>
+                    <li class="list-item">
+                        <span class="list-name">{{ school['name'] }}</span>
                         <div class="buttons">
                             <a href="{{ url_for('edit_school', resume_id=resume_id, education_id=education_id, school_id=school['id']) }}" class="btn">Изменить</a>
                             <a href="{{ url_for('delete_school', resume_id=resume_id, education_id=education_id, school_id=school['id']) }}" class="btn delete-btn">Удалить</a>
